fix the selector/style for .collapse-submenu

--- a/less/list-group.less
+++ b/less/list-group.less
@@ -142,11 +142,8 @@ li.list-group-item {
 }
 
 // Collapsible submenu
-.collapse-submenu > .dropdown-menu {
+.collapse-submenu .dropdown-menu {
   margin-left: 10px;
-  > li > a {
-    padding-left: 25px;
-  }
 }
 .collapse-submenu > .collapse-caret {
   margin-left: @padding-base-vertical;
